--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <img src="Love.gif" alt="Love" loop />
-    <h1 id="h1">Bohdan, will you be my valentine?</h1>
+    <h1 id="h1">Prakriti, will you be my valentine?⁠♡</h1>
     <div class="buttons-container">
       <div class="yes-container">
         <button id="yes">Yes</button>
